syntax = "proto3";

option java_package = "com.mattmerr.hipllang.hiccup";
option java_outer_classname = "ProtoBase";
option java_multiple_files = true;

message SourceInfo {
    string file_name = 1;
    int32 line = 2;
    int32 column = 3;
}
