syntax = "proto3";

option java_package = "com.mattmerr.hipllang.hiccup";
option java_outer_classname = "IR";
option java_multiple_files = true;

import "base.proto";

message Program {
    SourceInfo source_info = 1;
    Block block = 2;
}

message Expression {
    SourceInfo source_info = 1;

    oneof value {
        Block block = 2;
        IfExpression if_expression = 3;
        Call call = 4;
        Name name = 5;
        BooleanLiteral boolean_literal = 6;
        IntegerLiteral integer_literal = 7;
    }
}

message Block {
    SourceInfo source_info = 1;
    repeated Expression expression = 2;
}

message IfExpression {
    Expression condition = 1;
    Expression if_true = 2;
    Expression if_false = 3;
}

message Call {
    Expression target = 1;
    repeated Expression argument = 2;
}

message Name {
    string value = 1;
}

message BooleanLiteral {
    bool boolean_value = 1;
}

message IntegerLiteral {
    int32 integer_value = 2;
}
